--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,27 @@ body {
     color: #444;
 }
 
+.page {
+    box-shadow: 0px 0px 30px #0028;
+    min-height: 100vh;
+    background-color: #fff;
+}
+
 .container {
-    padding: 20px;
+    padding: 40px;
+    min-height: 100vh;
+}
+
+.nav .btn {
+    margin-right: 10px;
+}
+
+header {
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+    justify-content: space-around;
+    align-items: center;
+    background-color: gold;
+    padding: 10px;
 }
