--- a/templates/base.html
+++ b/templates/base.html
@@ -4,13 +4,30 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CRISPResso UI</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"/>
   </head>
   <body>
-    <div class="container">
-        {% block content %}
-        {% endblock %}
+    <div class="page">
+        <header>
+            <h1>CRISPResso UI - WIP</h1>
+            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <a class="btn btn-secondary" href="/">Home</a>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <a class="btn btn-secondary" href="/check">Check CRISPResso</a>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <a class="btn btn-secondary" href="/form">Run</a>
+                </li>
+            </ul>
+        </header>
+
+        <div class="container">
+            {% block content %}
+            {% endblock %}
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
