--- a/templates/form.html
+++ b/templates/form.html
@@ -1,19 +1,27 @@
 {% extends "base.html" %}
 {% block content %}
-<form>
+<form action="/run" method="post" enctype='multipart/form-data'>
+
     <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        <label for="exampleFormControlInput1" class="form-label">FASTQ R1 file</label>
+        <input type="file" class="form-control" name="fastq_r1" placeholder="Select a fastq.r1 file">
     </div>
+
     <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
+        <label for="exampleFormControlInput1" class="form-label">FASTQ R2 file</label>
+        <input type="file" class="form-control" name="fastq_r2" placeholder="Select a fastq.r2 file">
     </div>
-    <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+
+    <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Amplicon sequence</label>
+        <textarea class="form-control" name="amplicon_seq" placeholder="Your amplicon sequence here" rows="3"></textarea>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+
+    <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Guide sequence</label>
+        <input type="text" class="form-control" name="guide_seq" placeholder="Your guide sequence here">
+    </div>
+
+    <button type="submit" class="btn btn-primary">Run analysis</button>
 </form>
 {% endblock %}
