--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,10 @@
                 <li class="nav-item" role="presentation">
                     <a class="btn btn-secondary" href="/form">Run</a>
                 </li>
+                <li class="nav-item" role="presentation">
+                    <a class="btn btn-secondary" href="/output">Result</a>
+                </li>
+                
             </ul>
         </header>
 
