--- a/static/style.css
+++ b/static/style.css
@@ -29,3 +29,17 @@ header {
     background-color: gold;
     padding: 10px;
 }
+
+#status {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+#status-frame {
+    min-height: 200px;
+    background-color: rgb(233, 233, 233);
+    border-radius: 10px;
+    word-wrap: break-word;
+}
