--- a/templates/base.html
+++ b/templates/base.html
@@ -4,15 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CRISPResso UI</title>
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <ul class=flashes>
-        {% for message in messages %}
-        <li>{{ message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-    {% endwith %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"/>
   </head>
@@ -25,7 +16,7 @@
                     <a class="btn btn-secondary" href="/">Home</a>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <a class="btn btn-secondary" href="/check">Check CRISPResso</a>
+                    <a class="btn btn-secondary" onclick="app.check()" href="#">Check CRISPResso</a>
                 </li>
                 <li class="nav-item" role="presentation">
                     <a class="btn btn-secondary" href="/form">Run</a>
@@ -37,11 +28,23 @@
             </ul>
         </header>
 
+        <div id="status">
+            <div id="status-frame" class="m-3 p-3">
+                <h4>Status:</h4>
+                <ul>
+                    <li id="status-cmd"></li>
+                    <li id="status-msg"></li>
+                    <li id="status-code"></li>
+                </ul>
+            </div>
+        </div>
+
         <div class="container">
             {% block content %}
             {% endblock %}
         </div>
     </div>
+    <script src="{{ url_for('static', filename='app.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
