--- a/templates/form.html
+++ b/templates/form.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<form action="/run" method="post" enctype='multipart/form-data'>
+<form action="/run" method="POST" enctype='multipart/form-data'>
 
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">FASTQ R1 file</label>
@@ -22,6 +22,6 @@
         <input type="text" class="form-control" name="guide_seq" placeholder="Your guide sequence here">
     </div>
 
-    <button type="submit" class="btn btn-primary">Run analysis</button>
+    <button id="submit" type="submit" class="btn btn-primary">Run analysis</button>
 </form>
 {% endblock %}
