--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,7 @@ body {
     box-shadow: 0px 0px 30px #0028;
     min-height: 100vh;
     background-color: #fff;
+    padding-bottom: 25vh;
 }
 
 .container {
@@ -42,4 +43,20 @@ header {
     background-color: rgb(233, 233, 233);
     border-radius: 10px;
     word-wrap: break-word;
+}
+
+#spinner {
+    visibility: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-content: center;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgba(255,255,255,0.5);
 }
