--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,29 @@
 {% extends "base.html" %}
 {% block content %}
-  <h2>Hello, World!</h2>
-  <p>This is the upcoming CRISPResso UI.</p>
+<p>Fill the form and click on Run Analysis.</p>
+<form action="/run" method="POST" enctype='multipart/form-data'>
+
+    <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">FASTQ R1 file</label>
+        <input type="file" class="form-control" name="fastq_r1" placeholder="Select a fastq.r1 file">
+    </div>
+
+    <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">FASTQ R2 file</label>
+        <input type="file" class="form-control" name="fastq_r2" placeholder="Select a fastq.r2 file">
+    </div>
+
+    <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Amplicon sequence</label>
+        <textarea class="form-control" name="amplicon_seq" placeholder="Your amplicon sequence here" rows="3"></textarea>
+    </div>
+
+    <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Guide sequence</label>
+        <input type="text" class="form-control" name="guide_seq" placeholder="Your guide sequence here">
+    </div>
+
+    <button id="submit" type="submit" class="btn btn-primary">Run Analysis</button>
+</form>
+
 {% endblock %}
