--- a/templates/index.html
+++ b/templates/index.html
@@ -4,22 +4,30 @@
 <form action="/run" method="POST" enctype='multipart/form-data'>
 
     <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">FASTQ R1 file</label>
+        <label class="form-label">FASTQ file</label>
         <input type="file" class="form-control" name="fastq_r1" placeholder="Select a fastq.r1 file">
     </div>
 
     <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">FASTQ R2 file</label>
-        <input type="file" class="form-control" name="fastq_r2" placeholder="Select a fastq.r2 file">
+        <input class="form-check-input" type="checkbox" name="split" value="on" id="split">
+        <label class="form-check-label" for="flexCheckDefault">Split</label>
     </div>
 
+    <fieldset id="fastq-r2-fs">
+        <div  class="mb-3">
+            <label class="form-label">FASTQ R2 file <span id="fastq-r2-split-on" hidden>(disabled, uncheck split to provide a file)</span></label>
+            <input type="file" class="form-control" name="fastq_r2" placeholder="Select a fastq.r2 file">
+            
+        </div>
+    </fieldset>
+
     <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Amplicon sequence</label>
+        <label class="form-label">Amplicon sequence</label>
         <textarea class="form-control" name="amplicon_seq" placeholder="Your amplicon sequence here" rows="3"></textarea>
     </div>
 
     <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Guide sequence</label>
+        <label class="form-label">Guide sequence</label>
         <input type="text" class="form-control" name="guide_seq" placeholder="Your guide sequence here">
     </div>
 
