--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
         </div>
 
         <div id="spinner">
-            <p id="spinner-label" class="fs-5 fw-bold">Loading ...</p>
+            <p id="spinner-label" class="fs-5 fw-bold">Please wait ...</p>
             <div  style="width: 5rem; height: 5rem;" class="spinner-border" role="status" aria-hidden="true"></div>
         </div>
     </div>
