--- a/static/style.css
+++ b/static/style.css
@@ -11,9 +11,11 @@ body {
 }
 
 .container {
+    
     padding: 40px;
+    padding-top: 100px;
     min-height: 100vh;
-    width: 100vw;
+    width: 80;
     height: 100vh;
 }
 
@@ -29,6 +31,10 @@ header {
     align-items: center;
     background-color: gold;
     padding: 10px;
+    top: 0;
+    position: fixed;
+    left: 0;
+    width: 100vw;
 }
 
 #status {
@@ -40,7 +46,7 @@ header {
 
 #status-frame {
     min-height: 200px;
-    background-color: rgb(233, 233, 233);
+    background-color: rgb(233, 233, 233, 0.5);
     border-radius: 10px;
     word-wrap: break-word;
 }
