--- a/static/style.css
+++ b/static/style.css
@@ -11,11 +11,10 @@ body {
 }
 
 .container {
-    
     padding: 40px;
     padding-top: 100px;
     min-height: 100vh;
-    width: 80;
+    width: 80%;
     height: 100vh;
 }
 
@@ -34,21 +33,22 @@ header {
     top: 0;
     position: fixed;
     left: 0;
-    width: 100vw;
+    width: 100%;
 }
 
-#status {
+footer {
     position: fixed;
     bottom: 0;
-    left: 0;
-    right: 0;
+    width: 100%;
 }
 
-#status-frame {
-    min-height: 200px;
+
+#status {
+    max-height: 30vh;
+    overflow-y: scroll;
     background-color: rgb(233, 233, 233, 0.5);
-    border-radius: 10px;
     word-wrap: break-word;
+    width: 80%;
 }
 
 #spinner {
