fix screen captures

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CRISPResso UI</title>
+    <title>CRISPR Barista - WIP</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"/>
   </head>
   <body>
     <div class="page">
         <header>
-            <h1>CRISPResso UI - WIP</h1>
+            <h1>CRISPR Barista - WIP</h1>
             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                 <li class="nav-item" role="presentation">
                     <a class="btn btn-secondary" href="/">Home</a>
@@ -47,7 +47,7 @@
                 </ul>
             </div>
 
-            <p>CRISPResso UI is developped by <a href="https://www.dalle-cort.fr">Berenger Dalle-Cort</a>. This program uses CRISPResso2, Python, Flask and Bootstrap.</p>
+            <p>CRISPR Barista is developped by <a href="https://www.dalle-cort.fr">Berenger Dalle-Cort</a> using Python, Flask and Bootstrap. This program uses CRISPResso2 as external program.</p>
         </footer>
 
         
