--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   <body>
     <div class="page">
         <header>
-            <h1>CRISPR Barista - WIP</h1>
+            <h1 id="title">CRISPR Barista - WIP</h1>
             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                 <li class="nav-item" role="presentation">
                     <a class="btn btn-secondary" href="/">Home</a>
@@ -47,7 +47,7 @@
                 </ul>
             </div>
 
-            <p>CRISPR Barista is developped by <a href="https://www.dalle-cort.fr">Berenger Dalle-Cort</a> using Python, Flask and Bootstrap. This program uses CRISPResso2 as external program.</p>
+            <p id="credits">CRISPR Barista is developped by <a href="https://www.dalle-cort.fr">Berenger Dalle-Cort</a> using Python, Flask and Bootstrap. This program uses CRISPResso2 as external program.</p>
         </footer>
 
         
