--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,12 @@
+
+:root {
+    --color-primary: red
+}
+
+header > #title {
+    text-shadow: 1px 1px 1px white;
+}
+
 body {
     background-color: #ddd;
     color: #444;
@@ -12,10 +21,11 @@ body {
 
 .container {
     padding: 40px;
-    padding-top: 100px;
+    padding-top: 120px;
     min-height: 100vh;
     width: 80%;
     height: 100vh;
+    box-shadow: 0 0 20px #4c9fff1a;
 }
 
 .nav .btn {
@@ -28,12 +38,15 @@ header {
     justify-items: center;
     justify-content: space-around;
     align-items: center;
-    background-color: gold;
     padding: 10px;
+    padding-top: calc(10px + 10px);
     top: 0;
     position: fixed;
     left: 0;
     width: 100%;
+    background-color: #ffd78d;
+    box-shadow: 0px 0px 10px rgb(139 58 47);
+    border-bottom: 10px #ffc87a solid;
 }
 
 footer {
@@ -42,10 +55,14 @@ footer {
     width: 100%;
 }
 
+#credits {
+    opacity: 0.5;
+}
+
 
 #status {
     max-height: 30vh;
-    overflow-y: scroll;
+    overflow-y: auto;
     background-color: rgb(233, 233, 233, 0.5);
     word-wrap: break-word;
     width: 80%;
