--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
 
         <main class="container w-80">
             <p class="badge bg-secondary">CRISPResso status: <span id="crispresso-check-status"></span></p>
+            <h2>{{ header_text }}</h2>
             {% block content %}
             {% endblock %}
         </main>
