--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 
     <div class="mb-3">
         <label class="form-label">Amplicon sequence</label>
-        <input type="textarea" class="form-control" name="amplicon_seq" placeholder="Your amplicon sequence here" rows="3"></textarea>
+        <textarea class="form-control" name="amplicon_seq" placeholder="Your amplicon sequence here" rows="3" autocomplete="on"></textarea>
     </div>
 
     <div class="mb-3">
